logos-app/01-logos-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openfaas
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: logo
    task: openfaas
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: logo
    task: rancher
---
apiVersion: v1
kind: Service
metadata:
  name: python
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: logo
    task: python
